Updated to fix table alignment

--- a/public/home.css
+++ b/public/home.css
@@ -9,6 +9,11 @@ body {
   z-index: 10;
 }
 
+#forecast_card {
+  margin-top: 15px;
+  
+}
+
 /* Visibility Settings */
 .invisible {
   visibility: hidden;
